--- a/source/Controls/PluginCompactList.xaml
+++ b/source/Controls/PluginCompactList.xaml
@@ -6,12 +6,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:local="clr-namespace:SuccessStory.Controls"
-        xmlns:controlsPlaynite="clr-namespace:CommonPluginsPlaynite.Controls"
+        xmlns:wpftk="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel"
         xmlns:convertersPlaynite="clr-namespace:CommonPluginsPlaynite.Converters"
-        xmlns:commonpluginsshared="clr-namespace:CommonPluginsShared"
         xmlns:converters="clr-namespace:CommonPluginsPlaynite.Converters"
         xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
         mc:Ignorable="d" d:DesignHeight="100" d:DesignWidth="100"
+        MinHeight="{Binding RelativeSource={RelativeSource AncestorType=ContentControl}, Path=MinHeight}"
         MaxHeight="{Binding RelativeSource={RelativeSource AncestorType=ContentControl}, Path=MaxHeight}">
 
     <controls:PluginUserControlExtend.Resources>
@@ -23,7 +23,7 @@
         <convertersshared:ImageToGrayConverter x:Key="ImageToGrayConverter" />
     </controls:PluginUserControlExtend.Resources>
 
-    <Grid MinHeight="{Binding Height}" Name="PART_GridContener" Tag="{Binding PictureHeight}">
+    <Grid Height="{Binding Height}" Name="PART_GridContener" Tag="{Binding PictureHeight}">
         <ListBox ItemsSource="{Binding ItemsSource, Mode=OneWay}">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
@@ -50,7 +50,7 @@
 
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <VirtualizingStackPanel Orientation="Horizontal" PreviewMouseWheel="VirtualizingStackPanel_PreviewMouseWheel" />
+                    <wpftk:VirtualizingWrapPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
 
