Date textblock is cut in controls #173

--- a/source/Controls/PluginCompact.xaml
+++ b/source/Controls/PluginCompact.xaml
@@ -85,7 +85,7 @@
                         <Grid Grid.Row="0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="130" />
+                                <ColumnDefinition Width="auto" />
                             </Grid.ColumnDefinitions>
 
                             <TextBlock Grid.Column="0" Text="{Binding LastestAchievement.Name}" Foreground="{DynamicResource TextBrush}" 
