--- a/source/Controls/PluginViewItem.xaml
+++ b/source/Controls/PluginViewItem.xaml
@@ -4,9 +4,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-        xmlns:local="clr-namespace:SuccessStory.Controls"
         xmlns:converters="clr-namespace:CommonPluginsPlaynite.Converters"
-        mc:Ignorable="d">
+        xmlns:local="clr-namespace:SuccessStory.Controls"
+        mc:Ignorable="d" 
+        d:DataContext="{d:DesignInstance Type=local:PluginViewItemDataContext, IsDesignTimeCreatable=True}">
 
     <controls:PluginUserControlExtend.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -14,7 +15,7 @@
     </controls:PluginUserControlExtend.Resources>
 
     <Grid Name="PART_GridContener">
-        <TextBlock Text="{Binding LabelContent, FallbackValue='15/22'}" VerticalAlignment="Center"
+        <TextBlock Text="{Binding LabelContent}" VerticalAlignment="Center"
                    Visibility="{Binding IntegrationViewItemWithProgressBar, Converter={StaticResource InvertedBooleanToVisibilityConverter}}"
                    Foreground="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Foreground}"
                    FontSize="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=FontSize}" />
